Fri Jun  3 23:43:40 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/write.c: small write optimization

Fri Jun  3 23:40:56 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/ctlib/ctutil.c: minor style changes

Fri Jun  3 23:14:48 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/odbc/native.c src/odbc/odbc.c:
	* src/odbc/odbc_util.c src/pool/user.c src/tds/login.c:
	* src/tds/mem.c src/tds/net.c src/tds/query.c src/tds/read.c:
	* src/tds/token.c src/tds/write.c:
	- move connection related fields from TDSSOCKET to TDSSOCKETCONN

Fri Jun  3 23:13:22 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/dblib/dblib.c src/pool/main.c:
	* src/pool/member.c src/pool/user.c src/server/login.c:
	* src/tds/login.c src/tds/mem.c src/tds/net.c src/tds/tds_checks.c:
	* src/tds/util.c:
	- use macros to access s field of TDSSOCKET

Fri Jun  3 23:05:32 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/ctlib/ctutil.c src/dblib/dblib.c:
	* src/dblib/dbutil.c src/odbc/odbc.c src/tds/mem.c src/tds/net.c:
	* src/tds/util.c:
	- use macros to access parent field of TDSSOCKET

Fri Jun  3 23:04:13 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/apps/tsql.c src/ctlib/ct.c src/tds/bulk.c:
	* src/tds/config.c src/tds/iconv.c src/tds/login.c src/tds/mem.c:
	* src/tds/net.c src/tds/query.c src/tds/tds_checks.c:
	* src/tds/token.c src/tds/unittests/utf8_2.c src/tds/util.c:
	- use macros to access tds_ctx field in TDSSOCKET

Fri Jun  3 08:55:18 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/ct.c: constification

Thu Jun  2 22:42:38 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/rpc.c: fix init_proc declaration

Thu Jun  2 22:33:47 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/bcp.c: fix previous bcp patch

Thu Jun  2 21:14:53 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>